--- a/index.html
+++ b/index.html
@@ -6,11 +6,30 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./css/style.css">
         <title>Dropbox</title>
+
+        <!-- Link icons -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+        <!-- Link fonts -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     </head>
 
     <body>
         <header>
-
+            <nav class="flex-container">
+                <div>Logo + left menu</div>
+                <div>button + right menu</div>
+            </nav>
+            <section class="main-header">
+                <article class="container header-container">
+                    <h1>Ciao</h1>
+                    <div class="flex-container">
+                        <div></div>
+                        <div></div>
+                    </div>
+                </article>
+            </section>
         </header>
 
         <main></main>
