Create business-plans section macrostructure

--- a/index.html
+++ b/index.html
@@ -32,7 +32,23 @@
             </section>
         </header>
 
-        <main></main>
+        <main>
+            <section class="business-plans medium-width">
+                <article class="title-check">
+                    <h2></h2>
+                    <input type="radio" name="" id="">
+                </article>
+                <article class="plan-cards flex-container">
+                    <div class="card-plan"></div>
+                    <div class="card-plan"></div>
+                    <div class="card-plan"></div>
+                </article>
+                <article class="contact-plan">
+                    <div class="card-contact"></div>
+                </article>
+            </section>
+
+        </main>
 
         <footer></footer>
     </body>
