Create partner-contact section macrostructure

--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
                 </article>
             </section>
 
+            <section class="partner-contact flex-container medium-width">
+                <div class="partner-img"></div>
+                <div class="partner-text"></div>
+            </section>
         </main>
 
         <footer></footer>
