Create part of dropbox-operations section

--- a/index.html
+++ b/index.html
@@ -52,6 +52,18 @@
                 <div class="partner-img"></div>
                 <div class="partner-text"></div>
             </section>
+
+            <section class="dropbox-operations medium-width">
+                <div><h2>Title</h2></div>
+                <article class="operations-container flex-container">
+                    <div class="op-card"></div>
+                    <div class="op-card"></div>
+                    <div class="op-card"></div>
+                    <div class="op-card"></div>
+                    <div class="op-card"></div>
+                    <div class="op-card"></div>
+                </article>
+            </section>
         </main>
 
         <footer></footer>
