Create discover section macrostructure

--- a/index.html
+++ b/index.html
@@ -64,6 +64,13 @@
                     <div class="op-card"></div>
                 </article>
             </section>
+
+            <section class="discover medium-width">
+                <div>
+                    <h2>Flexare i clienti</h2>
+                    <a href="#"> Clicca qui per iscriverti al corso data-analitic di Boolean</a>
+                </div>
+            </section>
         </main>
 
         <footer></footer>
