Create partnership-logos section macrostructure

--- a/index.html
+++ b/index.html
@@ -71,6 +71,22 @@
                     <a href="#"> Clicca qui per iscriverti al corso data-analitic di Boolean</a>
                 </div>
             </section>
+
+            <section class="partnership flex-container">
+                <div class="logos-part flex-container">
+                    <div class="box-logo"></div>
+                    <div class="box-logo"></div>
+                    <div class="box-logo"></div>
+                    <div class="box-logo"></div>
+                </div>
+                <div class="logo-info"></div>
+                <div class="logos-part flex-container">
+                    <div class="box-logo"></div>
+                    <div class="box-logo"></div>
+                    <div class="box-logo"></div>
+                    <div class="box-logo"></div>
+                </div>
+            </section>
         </main>
 
         <footer></footer>
