Create free-trial section macrostructure

--- a/index.html
+++ b/index.html
@@ -87,6 +87,13 @@
                     <div class="box-logo"></div>
                 </div>
             </section>
+
+            <section class="free-trial">
+                <article id="trial" class="flex-container medium-width">
+                    <div class="text-part">Testo</div>
+                    <div class="button-part">Bottone bello</div>
+                </article>
+            </section>
         </main>
 
         <footer></footer>
