Create questions section macrostructure

--- a/index.html
+++ b/index.html
@@ -94,6 +94,21 @@
                     <div class="button-part">Bottone bello</div>
                 </article>
             </section>
+
+            <section class="questions">
+                <article class="question-container medium-width">
+                    <h2>Questions</h2>
+                    <div>
+                        <hr>
+                        <p>q1</p>
+                        <hr>
+                        <p>q2</p>
+                        <hr>
+                        <p>q3</p>
+                        <hr>
+                    </div>
+                </article>
+            </section>
         </main>
 
         <footer></footer>
