Create footer sections macrostructure

--- a/index.html
+++ b/index.html
@@ -111,6 +111,26 @@
             </section>
         </main>
 
-        <footer></footer>
+        <footer>
+            <section class="tools">
+                <article class="footer-container flex-container medium-width">
+                    <div class="tool-list">
+                        <ul>
+
+                        </ul>
+                    </div>
+                    <div class="tool-list"></div>
+                    <div class="tool-list"></div>
+                    <div class="tool-list"></div>
+                    <div class="tool-list"></div>
+                </article>
+
+                <article class="language medium-width">
+                    <div class="row"></div>
+                    <div class="lang-ita">Italian</div>
+                </article>
+            </section>
+
+        </footer>
     </body>
 </html>
