Implement nav of header

--- a/index.html
+++ b/index.html
@@ -18,8 +18,22 @@
     <body>
         <header>
             <nav class="flex-container">
-                <div>Logo + left menu</div>
-                <div>button + right menu</div>
+                <div class="flex-container">
+                    <img id="logo-small" src="./img/logo-small.png" alt="dropbox logo-small">
+                    <ul>
+                        <li>Perchè Dropbox</li>
+                        <li>Funzioni</li>
+                        <li>Piani e prezzi</li>
+                    </ul>
+                </div>
+                <div>
+                    <ul>
+                        <li>Supporto</li>
+                        <li>Contatta l'ufficio vendite</li>
+                        <li>Accedi</li>
+                        <li><button>Inizia</button></li>
+                    </ul>
+                </div>
             </nav>
             <section class="main-header">
                 <article class="container header-container">
