--- a/index.html
+++ b/index.html
@@ -37,10 +37,17 @@
             </nav>
             <section class="main-header">
                 <article class="container header-container">
-                    <h1>Ciao</h1>
+                    <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
                     <div class="flex-container">
-                        <div></div>
-                        <div></div>
+                        <div class="description">
+                            <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
+                            <button>Inizia la tua prova gratuita</button>
+                            <p>Annulla in qualsiasi momento</p>
+                            <i class="fa-solid fa-arrow-down p-absolute"></i>
+                        </div>
+                        <div class="jumbotron">
+                            <img src="./img/jumbo.png" alt="image example dropbox">
+                        </div>
                     </div>
                 </article>
             </section>
