Create part of structure of a plan-card

--- a/index.html
+++ b/index.html
@@ -56,11 +56,40 @@
         <main>
             <section class="business-plans medium-width">
                 <article class="title-check">
-                    <h2></h2>
-                    <input type="radio" name="" id="">
+                    <h2>Trova il piano business che fa per te</h2>
+                    <div>
+                        <input type="radio" name="month">
+                        <span>Fatturazione mensile</span>
+                    </div>
+                    <div>
+                        <input type="radio" name="year">
+                        <span>Fatturazione annuale</span>
+                    </div>
+                    <!-- Da modificare funzionamento e aspetto radio-box -->
                 </article>
                 <article class="plan-cards flex-container">
-                    <div class="card-plan"></div>
+                    <div class="card-plan">
+                        <div class="plan-type"><i class="fa-solid fa-user"></i> Singolo</div>
+                        <div class="plan-info">
+                            <h3>Professional</h3>
+                            <p class="price">&euro; 12.00</p>
+                            <p class="plan-period">/mese</p>
+                            <ul>
+                                <li>
+                                    <i class="fa-solid fa-user"></i>
+                                    <span> 1 utente</span>
+                                </li>
+                                <li>
+                                    <i class="fa-solid fa-folder"></i>
+                                    <span> 5 TB di spazio di archiviazione sicuro</span>
+                                </li>
+                                <li>
+                                    <i class="fa-solid fa-share-nodes"></i>
+                                    <span>Funzioni di produttività premium e condivisione file semplice e sicura</span>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
                     <div class="card-plan"></div>
                     <div class="card-plan"></div>
                 </article>
