Implement a card-plan of the section of main

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <li>Supporto</li>
                         <li>Contatta l'ufficio vendite</li>
                         <li>Accedi</li>
-                        <li><button>Inizia</button></li>
+                        <li><button class="blue-button">Inizia</button></li>
                     </ul>
                 </div>
             </nav>
@@ -41,7 +41,7 @@
                     <div class="flex-container">
                         <div class="description">
                             <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
-                            <button>Inizia la tua prova gratuita</button>
+                            <button class="blue-button">Inizia la tua prova gratuita</button>
                             <p>Annulla in qualsiasi momento</p>
                             <i class="fa-solid fa-arrow-down p-absolute"></i>
                         </div>
@@ -71,23 +71,45 @@
                     <div class="card-plan">
                         <div class="plan-type"><i class="fa-solid fa-user"></i> Singolo</div>
                         <div class="plan-info">
-                            <h3>Professional</h3>
-                            <p class="price">&euro; 12.00</p>
-                            <p class="plan-period">/mese</p>
-                            <ul>
-                                <li>
-                                    <i class="fa-solid fa-user"></i>
-                                    <span> 1 utente</span>
-                                </li>
-                                <li>
-                                    <i class="fa-solid fa-folder"></i>
-                                    <span> 5 TB di spazio di archiviazione sicuro</span>
-                                </li>
-                                <li>
-                                    <i class="fa-solid fa-share-nodes"></i>
-                                    <span>Funzioni di produttività premium e condivisione file semplice e sicura</span>
-                                </li>
-                            </ul>
+                            <div>
+                                <h3>Professional</h3>
+                                <p class="price">&euro; 12.00</p>
+                                <p class="plan-period">/mese</p>
+                            </div>
+                            <div>
+                                <ul>
+                                    <li>
+                                        <i class="fa-solid fa-user"></i>
+                                        <span> 1 utente</span>
+                                    </li>
+                                    <li>
+                                        <i class="fa-solid fa-folder"></i>
+                                        <span> 5 TB di spazio di archiviazione sicuro</span>
+                                    </li>
+                                    <li>
+                                        <i class="fa-solid fa-share-nodes"></i>
+                                        <span>Funzioni di produttività premium e condivisione file semplice e sicura</span>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div>
+                                <button class="blue-button trial-button " >Prova gratis per 30 giorni</button>
+                                <p>oppure <a href="#">acquista ora</a></p>
+                            </div>
+                            <div class="small-divider"></div>
+                            <div>
+                                <h5 class="highlights">Punti Salienti del piano</h5>
+                                <ul>
+                                    <li>
+                                        <i class="fa-solid fa-check"></i>
+                                        <span> Invia file fino a 100 GB con Dropbox Transfert</span>
+                                    </li>
+                                    <li>
+                                        <i class="fa-solid fa-check"></i>
+                                        <span> Cartelle offline su dispositivi mobili</span>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                     <div class="card-plan"></div>
