Fix one plan-card of the section of  main

--- a/index.html
+++ b/index.html
@@ -71,48 +71,42 @@
                     <div class="card-plan">
                         <div class="plan-type"><i class="fa-solid fa-user"></i> Singolo</div>
                         <div class="plan-info">
-                            <div>
-                                <h3>Professional</h3>
-                                <p class="price">&euro; 12.00</p>
-                                <p class="plan-period">/mese</p>
-                            </div>
-                            <div>
-                                <ul>
-                                    <li>
-                                        <i class="fa-solid fa-user"></i>
-                                        <span> 1 utente</span>
-                                    </li>
-                                    <li>
-                                        <i class="fa-solid fa-folder"></i>
-                                        <span> 5 TB di spazio di archiviazione sicuro</span>
-                                    </li>
-                                    <li>
-                                        <i class="fa-solid fa-share-nodes"></i>
-                                        <span>Funzioni di produttività premium e condivisione file semplice e sicura</span>
-                                    </li>
-                                </ul>
-                            </div>
-                            <div>
-                                <button class="blue-button trial-button " >Prova gratis per 30 giorni</button>
-                                <p>oppure <a href="#">acquista ora</a></p>
-                            </div>
+                            <h3>Professional</h3>
+                            <p class="price">&euro; 12.00</p>
+                            <p class="plan-period margin-card">/mese</p>
+                            <ul class="margin-card">
+                                <li class="flex-container">
+                                    <i class="fa-solid fa-user"></i>
+                                    <span> 1 utente</span>
+                                </li>
+                                <li class="flex-container">
+                                    <i class="fa-solid fa-folder"></i>
+                                    <span> 5 TB di spazio di archiviazione sicuro</span>
+                                </li>
+                                <li class="flex-container">
+                                    <i class="fa-solid fa-share-nodes"></i>
+                                    <span>Funzioni di produttività premium e condivisione file semplice e sicura</span>
+                                </li>
+                            </ul>
+                            <button class="blue-button trial-button " >Prova gratis per 30 giorni</button>
+                            <p class="margin-card">oppure <a href="#">acquista ora</a></p>
                             <div class="small-divider"></div>
-                            <div>
-                                <h5 class="highlights">Punti Salienti del piano</h5>
-                                <ul>
-                                    <li>
-                                        <i class="fa-solid fa-check"></i>
-                                        <span> Invia file fino a 100 GB con Dropbox Transfert</span>
-                                    </li>
-                                    <li>
-                                        <i class="fa-solid fa-check"></i>
-                                        <span> Cartelle offline su dispositivi mobili</span>
-                                    </li>
-                                </ul>
-                            </div>
+                            <h5 class="highlights">Punti Salienti del piano</h5>
+                            <ul class="margin-card">
+                                <li class="flex-container">
+                                    <i class="fa-solid fa-check"></i>
+                                    <span> Invia file fino a 100 GB con Dropbox Transfert</span>
+                                </li>
+                                <li class="flex-container">
+                                    <i class="fa-solid fa-check"></i>
+                                    <span> Cartelle offline su dispositivi mobili</span>
+                                </li>
+                            </ul>
                         </div>
                     </div>
-                    <div class="card-plan"></div>
+                    <div class="card-plan">
+                        
+                    </div>
                     <div class="card-plan"></div>
                 </article>
                 <article class="contact-plan">
