Implement contact card of the section of main

--- a/index.html
+++ b/index.html
@@ -195,8 +195,19 @@
                         </div>
                     </div>
                 </article>
+
                 <article class="contact-plan">
-                    <div class="card-contact"></div>
+                    <div class="plan-type"><i class="fa-solid fa-building"></i> Azienda</div>
+                    <div class="card-contact flex-container">
+                        <div class="left-card">
+                            <h3>Enterprise</h3>
+                            <h5 class="margin-card">Contatta l'ufficio vendite per i prezzi</h5>
+                            <p>Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala.</p>
+                        </div>
+                        <div class="right-card">
+                            <button class="blue-button trial-button" >Contatta l'ufficio vendite</button>
+                        </div>
+                    </div>
                 </article>
             </section>
 
