Implement partners section of main

--- a/index.html
+++ b/index.html
@@ -212,8 +212,14 @@
             </section>
 
             <section class="partner-contact flex-container medium-width">
-                <div class="partner-img"></div>
-                <div class="partner-text"></div>
+                <div class="partner-img">
+                    <img src="./img/partner.png" alt="dropbox partners photo">
+                </div>
+                <div class="partner-text">
+                    <h3>Entra in contatto con un partner Dropbox</h3>
+                    <p class="margin-card">Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui</p>
+                    <button>Trova un partner</button>
+                </div>
             </section>
 
             <section class="dropbox-operations medium-width">
