Implement one operation card of a section of main

--- a/index.html
+++ b/index.html
@@ -223,9 +223,15 @@
             </section>
 
             <section class="dropbox-operations medium-width">
-                <div><h2>Title</h2></div>
+                <div><h2>Esegui più operazioni con Dropbox Business</h2></div>
                 <article class="operations-container flex-container">
-                    <div class="op-card"></div>
+                    <div class="op-card">
+                        <div class="image-card">
+                            <img src="./img/business-feature-switching-tools.png" alt="image feature-switch">
+                        </div>
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                        <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                    </div>
                     <div class="op-card"></div>
                     <div class="op-card"></div>
                     <div class="op-card"></div>
