Implement all operations card of a section of main

--- a/index.html
+++ b/index.html
@@ -232,11 +232,41 @@
                         <h3>Passa di meno da uno strumento all'altro</h3>
                         <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
                     </div>
-                    <div class="op-card"></div>
-                    <div class="op-card"></div>
-                    <div class="op-card"></div>
-                    <div class="op-card"></div>
-                    <div class="op-card"></div>
+                    <div class="op-card">
+                        <div class="image-card">
+                            <img src="./img/business-feature-send-files-it.png" alt="image feature-send-files">
+                        </div>
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                        <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                    </div>
+                    <div class="op-card">
+                        <div class="image-card">
+                            <img src="./img/business-feature-coordinate-it.png" alt="image feature-coordinate">
+                        </div>
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                        <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                    </div>
+                    <div class="op-card">
+                        <div class="image-card">
+                            <img src="./img/business-feature-integrations-it.png" alt="image feature-integrations">
+                        </div>
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                        <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                    </div>
+                    <div class="op-card">
+                        <div class="image-card">
+                            <img src="./img/business-feature-multi-device.png" alt="image feature-multi-device">
+                        </div>
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                        <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                    </div>
+                    <div class="op-card">
+                        <div class="image-card">
+                            <img src="./img/business-feature-security.png" alt="image feature-security">
+                        </div>
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                        <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                    </div>
                 </article>
             </section>
 
