Implement discover section of main

--- a/index.html
+++ b/index.html
@@ -272,8 +272,8 @@
 
             <section class="discover medium-width">
                 <div>
-                    <h2>Flexare i clienti</h2>
-                    <a href="#"> Clicca qui per iscriverti al corso data-analitic di Boolean</a>
+                    <h2>Più di 500.000 team utilizzano Dropbox Business</h2>
+                    <a href="#">Scopri di più sui nostri clienti</a>
                 </div>
             </section>
 
