--- a/index.html
+++ b/index.html
@@ -284,7 +284,9 @@
                     <div class="box-logo"></div>
                     <div class="box-logo"></div>
                 </div>
-                <div class="logo-info"></div>
+                <div class="logo-info">
+                    
+                </div>
                 <div class="logos-part flex-container">
                     <div class="box-logo"></div>
                     <div class="box-logo"></div>
