Implement and modify left part of logos section

--- a/index.html
+++ b/index.html
@@ -279,13 +279,21 @@
 
             <section class="partnership flex-container">
                 <div class="logos-part flex-container">
-                    <div class="box-logo"></div>
-                    <div class="box-logo"></div>
-                    <div class="box-logo"></div>
-                    <div class="box-logo"></div>
+                    <div id="green-log" class="box-logo flex-container">
+                        <img src="./img/designit.svg" alt="designit logo">
+                    </div>
+                    <div id="bordeaux-log" class="box-logo flex-container">
+                        <img src="./img/arizona_state_university.svg" alt="arizona-university-logo">
+                    </div>
+                    <div id="light-blue-log" class="box-logo flex-container">
+                        <img src="./img/university_of_florida.svg" alt="florida-university logo">
+                    </div>
+                    <div id="topps-log" class="box-logo red-log flex-container">
+                        <img src="./img/topps.svg" alt="topps logo">
+                    </div>
                 </div>
                 <div class="logo-info">
-                    
+
                 </div>
                 <div class="logos-part flex-container">
                     <div class="box-logo"></div>
