Implement and modify right part of logos section

--- a/index.html
+++ b/index.html
@@ -296,10 +296,18 @@
 
                 </div>
                 <div class="logos-part flex-container">
-                    <div class="box-logo"></div>
-                    <div class="box-logo"></div>
-                    <div class="box-logo"></div>
-                    <div class="box-logo"></div>
+                    <div class="box-logo red-log flex-container">
+                        <img src="./img/world_bicycle_relief.svg" alt="bicycle logo">
+                    </div>
+                    <div id="light-log" class="box-logo flex-container">
+                        <img src="./img/hearst_corp.svg" alt="hearst-university-logo">
+                    </div>
+                    <div id="blue-log" class="box-logo flex-container">
+                        <img src="./img/lonely_planet.svg" alt="lonely-planet-university logo">
+                    </div>
+                    <div id="yellow-log" class="box-logo flex-container">
+                        <img src="./img/clear_channel.svg" alt="clear-channel logo">
+                    </div>
                 </div>
             </section>
 
