Implement logo-info part of the section logos

--- a/index.html
+++ b/index.html
@@ -292,9 +292,14 @@
                         <img src="./img/topps.svg" alt="topps logo">
                     </div>
                 </div>
-                <div class="logo-info">
 
+                <div class="logo-info">
+                    <img src="./img/designit-black.svg" alt="">
+                    <div class="logo-divider"></div>
+                    <p class="margin-card">"I membri del nostro team lavorano costantemente in Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox Paper".</p>
+                    <p>Morten Thomsen, Global IT Lead</p>
                 </div>
+
                 <div class="logos-part flex-container">
                     <div class="box-logo red-log flex-container">
                         <img src="./img/world_bicycle_relief.svg" alt="bicycle logo">
