Implement free-trial section of main

--- a/index.html
+++ b/index.html
@@ -318,8 +318,8 @@
 
             <section class="free-trial">
                 <article id="trial" class="flex-container medium-width">
-                    <div class="text-part">Testo</div>
-                    <div class="button-part">Bottone bello</div>
+                    <div class="text-part"><h2>Porta Dropbox Business nella tua azienda.</h2></div>
+                    <div class="button-part"><button>Inizia la tua prova gratuita</button></div>
                 </article>
             </section>
 
